--- a/data2204-chinedu-assignment2.ipynb
+++ b/data2204-chinedu-assignment2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "f0b2b422",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "4d1cef84",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "4            1                3                1        1      2  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "a879d211",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
        "4            1                3                1        1      2  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,9 +305,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "8257c37e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -473,7 +475,7 @@
        "max      10.000000        10.000000        10.000000   10.000000    4.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +487,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
+   "id": "24369bd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b380145dddf4b68b206e0d016f26092",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "400058a49029477b8f4dcbee5a624cf4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generate report structure:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cd8e198a408544f0a0ce480dc7e14d14",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Render HTML:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0be2ab0ae2c446a8835065fb43bda967",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"900\"\n",
+       "            height=\"350\"\n",
+       "            src=\"CancerReport.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1d31947e4f0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Create Profile Report\n",
+    "    \n",
+    "#Importing package\n",
+    "import pandas_profiling as pp\n",
+    "from IPython.display import IFrame\n",
+    " \n",
+    "# Profile Report\n",
+    "CancerReport = pp.ProfileReport(cancer)\n",
+    "CancerReport.to_file('CancerReport.html')\n",
+    "display(IFrame('CancerReport.html', width=900, height=350))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "0b9fccff",
    "metadata": {},
    "outputs": [
@@ -505,7 +603,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -533,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "2d546dbc",
    "metadata": {},
    "outputs": [
@@ -562,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "e3c069e5",
    "metadata": {},
    "outputs": [],
@@ -587,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "c9fac4a0",
    "metadata": {},
    "outputs": [
@@ -626,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "70e597a2",
    "metadata": {},
    "outputs": [],
@@ -655,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "57f76e0b",
    "metadata": {},
    "outputs": [],
@@ -695,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "b8c2b71e",
    "metadata": {},
    "outputs": [
@@ -727,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "992e7a54",
    "metadata": {},
    "outputs": [
@@ -762,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "04bcd87f",
    "metadata": {},
    "outputs": [
@@ -822,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "294050a6",
    "metadata": {},
    "outputs": [],
@@ -886,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "f9776ebd",
    "metadata": {},
    "outputs": [
@@ -938,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "40fbd5d2",
    "metadata": {},
    "outputs": [
@@ -968,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9533f35",
+   "id": "369566f7",
    "metadata": {},
    "outputs": [],
    "source": []
